fix/bodyoverflow

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -9,6 +9,10 @@ body {
 
   font-family: 'DM Sans', sans-serif;
   letter-spacing: 0.04em;
+
+  &.modal-open {
+    overflow: hidden;
+  }
 }
 
 h1,
